--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "EficientEdu"]
-	path = EficientEdu
+[submodule "eficientedu"]
+	path = eficientedu
 	url = https://github.com/Lucas-Adler/EficientEdu.git
