--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ee",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "homepage": "http://lucas-adler.github.io/EficientEdu",
   "type": "module",
