--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ee",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "homepage": "http://lucas-adler.github.io/EficientEdu",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build ",
+    "deploy": "gh-pages -d deploy",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
